--- a/benchmark.properties
+++ b/benchmark.properties
@@ -7,3 +7,13 @@ rheem.core.optimizer.reoptimize.proactive = true
 rheem.core.optimizer.cardinality.maxspread = 1
 rheem.core.optimizer.cardinality.spreadsmoothing = 1
 rheem.core.optimizer.cardinality.minconfidence = 1
+my.udf.costfunction.key = {\
+  "in":1, "out":1,\
+  "cpu":"${700*in0 + 56789}",\
+  "ram":"10000",\
+  "disk":"0",\
+  "net":"${0.2*out0 + 2000}",\
+  "p":0.9,\
+  "overhead":0,\
+  "ru":"${rheem:logGrowth(0.1, 0.1, 1000000, in0)}"\
+}
