--- a/benchmark.properties
+++ b/benchmark.properties
@@ -17,3 +17,8 @@ my.udf.costfunction.key = {\
   "overhead":0,\
   "ru":"${rheem:logGrowth(0.1, 0.1, 1000000, in0)}"\
 }
+my.udf.selectivity.key = {\
+  "p":0.9,\
+  "lower":0.555,\
+  "upper":0.666\
+}
