--- a/benchmark.properties
+++ b/benchmark.properties
@@ -1,29 +1,9 @@
 rheem.apps.profiledb=/Users/jonas/local_exp_log_May16.txt
 rheem.profiler.ga.max-cardinality-spread=2.0
 rheem.profiler.ga.min-cardinality-confidence=0.8
-#rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
-#rheem.core.optimizer.reoptimize = true
-#rheem.core.optimizer.reoptimize.proactive = true
-#rheem.core.optimizer.cardinality.maxspread = 1
-#rheem.core.optimizer.cardinality.spreadsmoothing = 1
-#rheem.core.optimizer.cardinality.minconfidence = 1
-my.udf.costfunction.key = {\
-  "in":1, "out":1,\
-  "cpu":"${700*in0 + 56789}",\
-  "ram":"10000",\
-  "disk":"0",\
-  "net":"${0.2*out0 + 2000}",\
-  "p":0.9,\
-  "overhead":0,\
-  "ru":"${rheem:logGrowth(0.1, 0.1, 1000000, in0)}"\
-}
-my.udf.wordcount.flatmap = {\
-  "p":1,\
-  "lower":17,\
-  "upper":17\
-}
-my.udf.worcount.filter = {\
-  "p":1,\
-  "lower":1,\
-  "upper":1\
-}
+rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
+rheem.core.optimizer.reoptimize = true
+rheem.core.optimizer.reoptimize.proactive = true
+rheem.core.optimizer.cardinality.maxspread = 1
+rheem.core.optimizer.cardinality.spreadsmoothing = 1
+rheem.core.optimizer.cardinality.minconfidence = 1
