--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <rheem.version>0.2.2-SNAPSHOT</rheem.version>
+        <rheem.version>0.3.1-SNAPSHOT</rheem.version>
         <scala.version>2.10.5</scala.version>
         <scala.compat.version>2.10</scala.compat.version>
         <spark.version>1.6.2</spark.version>
@@ -82,12 +82,12 @@
         </dependency>
         <dependency>
             <groupId>org.qcri.rheem</groupId>
-            <artifactId>rheem-spark</artifactId>
+            <artifactId>rheem-spark_2.11</artifactId>
             <version>${rheem.version}</version>
         </dependency>
         <dependency>
             <groupId>org.qcri.rheem</groupId>
-            <artifactId>rheem-graphchi</artifactId>
+            <artifactId>rheem-graphchi_2.11</artifactId>
             <version>${rheem.version}</version>
         </dependency>
         <dependency>
@@ -102,7 +102,7 @@
         </dependency>
         <dependency>
             <groupId>org.qcri.rheem</groupId>
-            <artifactId>rheem-api</artifactId>
+            <artifactId>rheem-api_2.11</artifactId>
             <version>${rheem.version}</version>
         </dependency>
 
