--- a/benchmark.properties
+++ b/benchmark.properties
@@ -1,9 +1,19 @@
 rheem.apps.profiledb=/Users/jonas/local_exp_log_May16.txt
-rheem.profiler.ga.max-cardinality-spread=2.0
-rheem.profiler.ga.min-cardinality-confidence=0.8
-rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
-rheem.core.optimizer.reoptimize = true
-rheem.core.optimizer.reoptimize.proactive = true
-rheem.core.optimizer.cardinality.maxspread = 1
-rheem.core.optimizer.cardinality.spreadsmoothing = 1
-rheem.core.optimizer.cardinality.minconfidence = 1
+#rheem.profiler.ga.max-cardinality-spread=2.0
+#rheem.profiler.ga.min-cardinality-confidence=0.8
+#rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
+#rheem.core.optimizer.reoptimize = true
+#rheem.core.optimizer.reoptimize.proactive = true
+#rheem.core.optimizer.cardinality.maxspread = 1
+#rheem.core.optimizer.cardinality.spreadsmoothing = 1
+#rheem.core.optimizer.cardinality.minconfidence = 1
+my.udf.wordcount.flatmap = {\
+  "p":1,\
+  "lower":17,\
+  "upper":17\
+}
+my.udf.wordcount.filter = {\
+  "p":1,\
+  "lower":1,\
+  "upper":1\
+}
