update scala script and small adjustments so scala version is consistently 2.10.5

--- a/benchmark.properties
+++ b/benchmark.properties
@@ -7,11 +7,11 @@ rheem.core.optimizer.reoptimize.proactive = true
 rheem.core.optimizer.cardinality.maxspread = 1
 rheem.core.optimizer.cardinality.spreadsmoothing = 1
 rheem.core.optimizer.cardinality.minconfidence = 1
-#my.udf.wordcount.flatmap = {\
-#  "p":1,\
-#  "lower":17,\
-#  "upper":17\
-#}
+my.udf.wordcount.flatmap = {\
+  "p":1,\
+  "lower":17,\
+  "upper":17\
+}
 #my.udf.wordcount.filter = {\
 #  "p":1,\
 #  "lower":1,\
