--- a/benchmark.properties
+++ b/benchmark.properties
@@ -1,31 +1,34 @@
 rheem.apps.profiledb=/Users/jonas/local_exp_log_May16.txt
+
 #rheem.profiler.ga.max-cardinality-spread=2.0
 #rheem.profiler.ga.min-cardinality-confidence=0.8
+
 rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
-rheem.core.optimizer.reoptimize = true
-rheem.core.optimizer.reoptimize.proactive = true
-rheem.core.optimizer.cardinality.maxspread = 1
-rheem.core.optimizer.cardinality.spreadsmoothing = 1
-rheem.core.optimizer.cardinality.minconfidence = 1
+
+#rheem.core.optimizer.reoptimize = true
+#rheem.core.optimizer.reoptimize.proactive = true
+#rheem.core.optimizer.cardinality.maxspread = 1
+#rheem.core.optimizer.cardinality.spreadsmoothing = 1
+#rheem.core.optimizer.cardinality.minconfidence = 1
 
 
 
-my.udf.Sindy.reduceBy1 = {  "p":1,   "lower":0.910906194241,  "upper":0.95716410035,}
-my.udf.Sindy.flatmap2 = {  "p":1,   "lower":1.00256176697,  "upper":1.00528716047,}
-my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.09565992998,  "upper":1.17627776291,}
-my.udf.Sindy.reduceBy2 = {  "p":1,   "lower":9.19261900929e-09,  "upper":7.47775368279e-05,}
-my.udf.Sindy.filter1 = {  "p":1,   "lower":1.0,  "upper":1.0,}
-
-
-my.udf.kmeans.reduceByKey = {  "p":1,   "lower":1.33406226495e-06,  "upper":0.000335030822836,}
-my.udf.kmeans.flatmap = {  "p":1,   "lower":0.0,  "upper":10.0,}
-my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.09565992998,  "upper":1.17627776291,}
-my.udf.wordcount.reduce = {  "p":1,   "lower":0.00163305992752,  "upper":0.0203892901198,}
-my.udf.wordcount.flatmap = {  "p":1,   "lower":80.4624322549,  "upper":80.7957667981,}
-my.udf.Sindy.flatmap2 = {  "p":1,   "lower":1.00330564261,  "upper":1.00528716047,}
-my.udf.Sindy.filter1 = {  "p":1,   "lower":1.0,  "upper":1.0,}
-my.udf.tpchq3file.reduce = {  "p":1,   "lower":0.0,  "upper":1.0,}
-my.udf.wordcount.filter = {  "p":1,   "lower":0.999777055462,  "upper":0.999780371219,}
-my.udf.tpchq3file.filter1 = {  "p":1,   "lower":0.192435301924,  "upper":0.202339258574,}
-my.udf.tpchq3file.filter3 = {  "p":1,   "lower":0.539246470827,  "upper":0.542348837597,}
-my.udf.tpchq3file.filter2 = {  "p":1,   "lower":0.482138078673,  "upper":0.487089844011,}
+#my.udf.Sindy.reduceBy1 = {  "p":1,   "lower":0.910906194241,  "upper":0.95716410035,}
+#my.udf.Sindy.flatmap2 = {  "p":1,   "lower":1.00256176697,  "upper":1.00528716047,}
+#my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.09565992998,  "upper":1.17627776291,}
+#my.udf.Sindy.reduceBy2 = {  "p":1,   "lower":9.19261900929e-09,  "upper":7.47775368279e-05,}
+#my.udf.Sindy.filter1 = {  "p":1,   "lower":1.0,  "upper":1.0,}
+#
+#
+#my.udf.kmeans.reduceByKey = {  "p":1,   "lower":1.33406226495e-06,  "upper":0.000335030822836,}
+#my.udf.kmeans.flatmap = {  "p":1,   "lower":0.0,  "upper":10.0,}
+#my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.09565992998,  "upper":1.17627776291,}
+#my.udf.wordcount.reduce = {  "p":1,   "lower":0.00163305992752,  "upper":0.0203892901198,}
+#my.udf.wordcount.flatmap = {  "p":1,   "lower":80.4624322549,  "upper":80.7957667981,}
+#my.udf.Sindy.flatmap2 = {  "p":1,   "lower":1.00330564261,  "upper":1.00528716047,}
+#my.udf.Sindy.filter1 = {  "p":1,   "lower":1.0,  "upper":1.0,}
+#my.udf.tpchq3file.reduce = {  "p":1,   "lower":0.0,  "upper":1.0,}
+#my.udf.wordcount.filter = {  "p":1,   "lower":0.999777055462,  "upper":0.999780371219,}
+#my.udf.tpchq3file.filter1 = {  "p":1,   "lower":0.192435301924,  "upper":0.202339258574,}
+#my.udf.tpchq3file.filter3 = {  "p":1,   "lower":0.539246470827,  "upper":0.542348837597,}
+#my.udf.tpchq3file.filter2 = {  "p":1,   "lower":0.482138078673,  "upper":0.487089844011,}
