using the coefficient to calculate relative selectivity

--- a/benchmark.properties
+++ b/benchmark.properties
@@ -5,6 +5,9 @@ rheem.apps.profiledb=/Users/jonas/local_exp_log_May16.txt
 
 rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
 
+
+my.udf.wordcount.reduce = {  "p":1,   "lower":-0.002455392569333789,  "upper":0.020389290119756313, "coeff":1337}
+
 #rheem.core.optimizer.reoptimize = true
 #rheem.core.optimizer.reoptimize.proactive = true
 #rheem.core.optimizer.cardinality.maxspread = 1
