comment out withCardinalityEstimator

--- a/benchmark.properties
+++ b/benchmark.properties
@@ -5,8 +5,10 @@ rheem.apps.profiledb=/Users/jonas/local_exp_log_May16.txt
 
 rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
 
+rheem.profiler.sr.logistic = false
 
-my.udf.wordcount.reduce = {  "p":1,   "lower":-0.002455392569333789,  "upper":0.020389290119756313, "coeff":1337}
+
+#my.udf.wordcount.reduce = {  "p":1,   "lower":-0.002455392569333789,  "upper":0.020389290119756313, "coeff":1337}
 
 #rheem.core.optimizer.reoptimize = true
 #rheem.core.optimizer.reoptimize.proactive = true
@@ -24,6 +26,7 @@ my.udf.wordcount.reduce = {  "p":1,   "lower":-0.002455392569333789,  "upper":0.
 #
 #
 #my.udf.kmeans.reduceByKey = {  "p":1,   "lower":1.33406226495e-06,  "upper":0.000335030822836,}
+my.udf.CrocoPR.join1 = {  "p":1,   "lower":1.33406226495e-06,  "upper":0.000335030822836,}
 #my.udf.kmeans.flatmap = {  "p":1,   "lower":0.0,  "upper":10.0,}
 #my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.09565992998,  "upper":1.17627776291,}
 #my.udf.wordcount.reduce = {  "p":1,   "lower":0.00163305992752,  "upper":0.0203892901198,}
