--- a/benchmark.properties
+++ b/benchmark.properties
@@ -5,36 +5,28 @@ rheem.apps.profiledb=/Users/jonas/local_exp_log_May16.txt
 
 rheem.core.optimizer.instrumentation = org.qcri.rheem.core.profiling.FullInstrumentationStrategy
 
-rheem.profiler.sr.logistic = false
+rheem.profiler.sr.logistic = true
 
 
-#my.udf.wordcount.reduce = {  "p":1,   "lower":-0.002455392569333789,  "upper":0.020389290119756313, "coeff":1337}
-
-#rheem.core.optimizer.reoptimize = true
-#rheem.core.optimizer.reoptimize.proactive = true
-#rheem.core.optimizer.cardinality.maxspread = 1
-#rheem.core.optimizer.cardinality.spreadsmoothing = 1
-#rheem.core.optimizer.cardinality.minconfidence = 1
-
-
-
-#my.udf.Sindy.reduceBy1 = {  "p":1,   "lower":0.910906194241,  "upper":0.95716410035,}
-#my.udf.Sindy.flatmap2 = {  "p":1,   "lower":1.00256176697,  "upper":1.00528716047,}
-#my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.09565992998,  "upper":1.17627776291,}
-#my.udf.Sindy.reduceBy2 = {  "p":1,   "lower":9.19261900929e-09,  "upper":7.47775368279e-05,}
-#my.udf.Sindy.filter1 = {  "p":1,   "lower":1.0,  "upper":1.0,}
-#
-#
-#my.udf.kmeans.reduceByKey = {  "p":1,   "lower":1.33406226495e-06,  "upper":0.000335030822836,}
-my.udf.CrocoPR.join1 = {  "p":1,   "lower":1.33406226495e-06,  "upper":0.000335030822836,}
-#my.udf.kmeans.flatmap = {  "p":1,   "lower":0.0,  "upper":10.0,}
-#my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.09565992998,  "upper":1.17627776291,}
-#my.udf.wordcount.reduce = {  "p":1,   "lower":0.00163305992752,  "upper":0.0203892901198,}
-#my.udf.wordcount.flatmap = {  "p":1,   "lower":80.4624322549,  "upper":80.7957667981,}
-#my.udf.Sindy.flatmap2 = {  "p":1,   "lower":1.00330564261,  "upper":1.00528716047,}
-#my.udf.Sindy.filter1 = {  "p":1,   "lower":1.0,  "upper":1.0,}
-#my.udf.tpchq3file.reduce = {  "p":1,   "lower":0.0,  "upper":1.0,}
-#my.udf.wordcount.filter = {  "p":1,   "lower":0.999777055462,  "upper":0.999780371219,}
-#my.udf.tpchq3file.filter1 = {  "p":1,   "lower":0.192435301924,  "upper":0.202339258574,}
-#my.udf.tpchq3file.filter3 = {  "p":1,   "lower":0.539246470827,  "upper":0.542348837597,}
-#my.udf.tpchq3file.filter2 = {  "p":1,   "lower":0.482138078673,  "upper":0.487089844011,}
+my.udf.tpchq3file.join1 = {  "p":1,   "lower":0.0022675736961451248,  "upper":0.19423933291702258, "coeff":7.58873136669e-15, "intercept":0.00197770599306}
+my.udf.tpchq3file.join2 = {  "p":1,   "lower":8.909726041285827e-05,  "upper":0.009080028431635754, "coeff":9.33013117687e-19, "intercept":4.15505509751e-06}
+my.udf.kmeans.reduceByKey = {  "p":1,   "lower":3.3373715529123576e-05,  "upper":0.0004, "coeff":-2.01774874899e-19, "intercept":3.65100887437e-08}
+my.udf.CrocoPR.distinct2 = {  "p":1,   "lower":0.026718819696196997,  "upper":0.5403932430440003, "coeff":-1.83003693758e-16, "intercept":0.073014512881}
+my.udf.wordcount.reduce = {  "p":1,   "lower":0.0016330599275214777,  "upper":0.020389290119756313, "coeff":-4.39156890721e-23, "intercept":4.91571379525e-05}
+my.udf.Sindy.flatmap2 = {  "p":1,   "lower":1.0030959953124001,  "upper":1.005287160469079, "coeff":-3.69503529606e-20, "intercept":0.251916230288}
+my.udf.tpchq3file.filter1 = {  "p":1,   "lower":0.192435301924353,  "upper":0.2023392585739774, "coeff":5.81316894606e-15, "intercept":0.00990556789233}
+my.udf.CrocoPR.join3 = {  "p":1,   "lower":0.5,  "upper":0.5, "coeff":0.0, "intercept":0.0625}
+my.udf.Sindy.flatmap1 = {  "p":1,   "lower":1.095659929983077,  "upper":1.1762777629114263, "coeff":-4.14370730415e-18, "intercept":0.32552978566}
+my.udf.tpchq3file.filter2 = {  "p":1,   "lower":0.4821380786727321,  "upper":0.48708984401062166, "coeff":5.16112298084e-17, "intercept":0.0587451201299}
+my.udf.wordcount.filter = {  "p":1,   "lower":0.9997770554618433,  "upper":0.9997803712190019, "coeff":4.33362073229e-25, "intercept":0.249889481099}
+my.udf.Sindy.filter1 = {  "p":1,   "lower":0.0,  "upper":0.0, "coeff":0.0, "intercept":0.0}
+my.udf.tpchq3file.filter3 = {  "p":1,   "lower":0.5392464708272948,  "upper":0.5423488375974231, "coeff":-6.52622381511e-18, "intercept":0.0731338342642}
+my.udf.CrocoPR.distinct1 = {  "p":1,   "lower":0.9085434892851562,  "upper":0.993120113898321, "coeff":3.60905765967e-16, "intercept":0.206359620032}
+my.udf.Sindy.union = {  "p":1,   "lower":1.0,  "upper":1.0, "coeff":0.0, "intercept":0.25}
+my.udf.tpchq3file.reduce = {  "p":1,   "lower":0.3772386844676001,  "upper":1.0, "coeff":-6.42663703143e-11, "intercept":0.138676108763}
+my.udf.CrocoPR.flatMap = {  "p":1,   "lower":2.0,  "upper":2.0, "coeff":0.0, "intercept":1.0}
+my.udf.wordcount.flatmap = {  "p":1,   "lower":80.46243225494325,  "upper":80.79576679809168, "coeff":-2.85005256093e-14, "intercept":1623.36595773}
+my.udf.Sindy.reduceBy1 = {  "p":1,   "lower":0.9190675889194447,  "upper":0.9571641003501703, "coeff":-7.04840263839e-19, "intercept":0.21954004537}
+my.udf.Sindy.reduceBy2 = {  "p":1,   "lower":4.553441459180759e-08,  "upper":7.477753682793689e-05, "coeff":-2.35449908601e-26, "intercept":2.23533185642e-10}
+my.udf.CrocoPR.join2 = {  "p":1,   "lower":0.48058751183071075,  "upper":0.949273087087323, "coeff":1.44930903918e-15, "intercept":0.0580290433853}
+my.udf.CrocoPR.join1 = {  "p":1,   "lower":0.48058751183071075,  "upper":0.949273087087323, "coeff":1.44930903918e-15, "intercept":0.0580290433853}
